--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -134,6 +135,10 @@ nav ul li a:hover {
   width: 60%;
 }
 
+.home-content .home-content-text a {
+  scroll-behavior: smooth;
+}
+
 .home-content .home-content-logo {
   width: auto;
   display: flex;
@@ -142,7 +147,7 @@ nav ul li a:hover {
 }
 
 .home-content-logo img {
-  width: 25vw;
+  width: 350px;
 }
 
 .home-title {
@@ -162,7 +167,7 @@ nav ul li a:hover {
 }
 
 .home-content-text p {
-  font-size: 18px;
+  font-size: 16px;
   margin-top: 10%;
   width: 600px;
 }
@@ -374,7 +379,8 @@ nav ul li a:hover {
 }
 
 .role-popup-2 .role-popup-content-2,
-.role-popup-3 .role-popup-content-3 {
+.role-popup-3 .role-popup-content-3,
+.role-popup-4 .role-popup-content-4 {
   position: fixed;
   top: 0px;
   left: 0px;
@@ -386,7 +392,8 @@ nav ul li a:hover {
 }
 
 .role-popup-2 .role-popup-text-2,
-.role-popup-3 .role-popup-text-3 {
+.role-popup-3 .role-popup-text-3,
+.role-popup-4 .role-popup-text-4 {
   position: absolute;
   top: 250%;
   left: 50%;
@@ -402,18 +409,21 @@ nav ul li a:hover {
 }
 
 .role-popup-text-2 h3,
-.role-popup-text-3 h3 {
+.role-popup-text-3 h3,
+.role-popup-text-4 h3 {
   text-align: center;
   margin-bottom: 10px;
 }
 
 .role-popup-text-2 ol li,
-.role-popup-text-3 ol li {
+.role-popup-text-3 ol li,
+.role-popup-text-4 ol li {
   margin-left: 17px;
 }
 
 .role-popup-2 .role-close-btn-2,
-.role-popup-3 .role-close-btn-3 {
+.role-popup-3 .role-close-btn-3,
+.role-popup-4 .role-close-btn-4 {
   position: absolute;
   right: 20px;
   top: 20px;
@@ -424,31 +434,33 @@ nav ul li a:hover {
 }
 
 .role-popup-2.active .role-popup-content-2,
-.role-popup-3.active .role-popup-content-3 {
+.role-popup-3.active .role-popup-content-3,
+.role-popup-4.active .role-popup-content-4 {
   display: block;
 }
 
 .role-popup-2.active .role-popup-text-2,
-.role-popup-3.active .role-popup-text-3 {
+.role-popup-3.active .role-popup-text-3,
+.role-popup-4.active .role-popup-text-4 {
   transition: all 300ms ease-in-out;
   transform: translate(-50%, -50%) scale(1);
 }
 
-.form {
+.isi-form {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-color: rgba(232, 232, 232, 0.85);
 }
 
-.form .form-title {
+.isi-form .form-title {
   display: flex;
   align-items: center;
   flex-direction: column;
   color: black;
-  margin-top: 50px;
+  margin-top: 10%;
 }
 
-.form .form-content {
+.isi-form .form-content {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -491,27 +503,193 @@ nav ul li a:hover {
 }
 
 .form-container {
-  padding: 20px;
-  margin: 20px 0;
+  width: 50%;
+  padding: 30px;
   border: 2px solid #ccc;
-  background-color: #f9f9f9;
+  border-radius: 20px;
+  background-color: #e8e8e8;
+  margin-bottom: 10%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.form-container .img-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.form-container img {
+  width: 30%;
+}
+
+.form-container h3 {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .form-group {
+  margin-top: 20px;
   margin-bottom: 15px;
 }
 
 .form-group label {
   display: block;
   margin-bottom: 5px;
-  font-weight: bold;
 }
 
-.form-group input {
+.form-group input,
+textarea {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4);
+  background-color: #fff;
 }
+
+textarea,
+input:required:invalid:focus {
+  border: none;
+  outline: 2px solid red;
+  border-radius: 5px;
+}
+
+/* Default valid state for inputs */
+textarea,
+input:valid,
+textarea,
+input:required {
+  border: 2px solid #727272;
+  outline: inherit;
+  border-radius: 5px;
+}
+
+.btn-send-form {
+  margin-top: 10%;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.btn-send-form button {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  color: #0077b6;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+  background-color: #f0f0f0;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.btn-send-form button:hover {
+  background-color: #e0e0e0;
+  color: #005f91;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+}
+
+/* Active click effect */
+.btn-send-form button:active {
+  background-color: #d0d0d0;
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4);
+  transform: scale(0.98);
+}
+
+/* page download surat */
+
+.container-down-surat {
+  color: black;
+  width: 100%;
+  height: 100vh;
+  padding: 100px 60px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.container-down-surat .title-down-surat {
+  text-align: center;
+  padding: 20px;
+}
+
+.container-down-surat-content {
+  background-color: white;
+  padding-top: 20px;
+  margin-top: 30px;
+  min-height: 40vh;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.container-down-surat-content .add-surat {
+  background-color: #0077b6;
+  width: 12%;
+  margin-left: 25px;
+  margin-bottom: 20px;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.add-surat a {
+  text-decoration: none;
+}
+
+.add-surat h5 {
+  margin: 0;
+  padding: 10px 0;
+  color: white;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.add-surat h5:hover {
+  background-color: #caf0f8;
+  transition: background-color 0.5s ease;
+}
+
+.add-surat h5 i {
+  color: white;
+  font-size: 14px;
+}
+
+.table-down-surat {
+  width: 95%;
+  margin: 0 auto;
+  font-size: 14px;
+  color: #000000;
+  border-collapse: collapse;
+}
+
+.table-down-surat th,
+.table-down-surat td {
+  padding: 10px;
+  text-align: left;
+  font-size: 14px;
+  border: 1.3px solid black;
+}
+
+.table-down-surat th {
+  background-color: #0077b6;
+  color: white;
+}
+
+.table-down-surat td i {
+  cursor: pointer;
+  color: #0077b6;
+  font-size: 16px;
+  display: block;
+  text-align: center;
+}
+
+.table-down-surat td i:hover {
+  color: #caf0f8;
+}
+
+/* page download surat end */
 
 /* Footer */
 footer {
