--- a/style.css
+++ b/style.css
@@ -12,6 +12,33 @@ body {
   color: white;
 }
 
+#scrollToTopBtn {
+  display: none; /* Mulanya disembunyikan */
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  background-color: #0077b6;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 50%; /* Membuat tombol berbentuk lingkaran */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s ease;
+}
+
+#scrollToTopBtn:hover {
+  background-color: #005f91; /* Warna ketika tombol di-hover */
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+}
+
+#scrollToTopBtn i {
+  background-color: #0077b6;
+  font-size: 50px;
+}
+
 .mybg {
   width: 100%;
 }
@@ -22,6 +49,111 @@ body {
   position: fixed;
   top: 0;
 }
+/* Login */
+.container-login {
+  height: 100vh;
+  background-color: rgba(252, 252, 252, 0.6);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container-login .title-login {
+  text-align: center;
+  color: black;
+  margin-bottom: 30px;
+}
+
+.title-login h1,
+h2 {
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: slideDown 0.6s ease-out forwards;
+}
+
+.title-login img {
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: slideDown 0.6s ease-out forwards;
+  animation-delay: 0.3s;
+}
+
+@keyframes slideDown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.container-login .login-form {
+  position: relative;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 150, 199, 0.7),
+    rgba(72, 202, 228, 0.7),
+    rgba(173, 232, 244, 0.7)
+  );
+  padding: 50px;
+  border-radius: 10px;
+  text-align: center;
+  color: white;
+  width: 320px;
+  margin-top: 3rem;
+}
+
+.login-form h3 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.login-form input {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 30px;
+}
+
+.login-logo {
+  position: absolute;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  padding: 10px;
+}
+
+.login-logo img {
+  width: 100px;
+}
+
+.login-form button {
+  width: 40%;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #ffffff;
+  color: #0077b6;
+  border: none;
+  border-radius: 10px;
+  font-weight: 600;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
+  transition: all 0.3s ease;
+}
+
+.login-form button:hover {
+  background-color: #e0e0e0;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+}
+
+/* Active click effect */
+.login-form button:active {
+  background-color: #d0d0d0;
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.4);
+  transform: scale(0.98);
+}
+/* Login end */
 
 /* Navbar */
 .container-navbar {
@@ -30,6 +162,7 @@ body {
   justify-content: space-between;
   padding: 0.7rem 2rem;
   color: #fff;
+  z-index: 10;
 }
 .container-navbar a {
   list-style: none;
@@ -216,6 +349,12 @@ nav ul li a:hover {
   width: 200px;
   background-color: #f3f3f3;
   box-shadow: 0 4px 8px 0 #0077b6, 0 6px 20px 0 #ade8f4;
+  transition: all 0.3s ease-in-out;
+}
+
+.tutorial .tutorial-main:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px 0 #0077b6, 0 12px 24px 0 #ade8f4;
 }
 
 .tutorial .tutorial-title-container {
@@ -271,8 +410,8 @@ nav ul li a:hover {
 
 .role .role-main {
   background: linear-gradient(to bottom, #0096c7, #48cae4, #ade8f4);
-  height: 300px;
-  width: 250px;
+  height: 280px;
+  width: 220px;
   border-radius: 20px;
 }
 
@@ -301,6 +440,7 @@ nav ul li a:hover {
 
 .role-image img {
   width: 100%;
+  border-radius: 10px;
 }
 
 .role .role-button-container {
@@ -318,6 +458,19 @@ nav ul li a:hover {
   border-style: none;
   background-color: #e8e8e8;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.role-button-container button:hover {
+  background-color: #d0d0d0; /* Change background color on hover */
+  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.2), 0 8px 24px 0 rgba(0, 0, 0, 0.19); /* Increase shadow on hover */
+}
+
+.role-button-container button:active {
+  transform: scale(0.95); /* Slightly shrink the button when clicked */
+  box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.3); /* Add inset shadow to create pressed effect */
+  background-color: #c0c0c0; /* Change background color when button is pressed */
 }
 
 .role-popup-1 .role-popup-content-1 {
@@ -536,6 +689,11 @@ nav ul li a:hover {
 .form-group label {
   display: block;
   margin-bottom: 5px;
+  font-size: 14px;
+}
+
+.form-group span {
+  color: red;
 }
 
 .form-group input,
@@ -584,7 +742,6 @@ input:required {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
   background-color: #f0f0f0;
   transition: all 0.3s ease;
-  position: relative;
 }
 
 .btn-send-form button:hover {
@@ -688,8 +845,306 @@ input:required {
 .table-down-surat td i:hover {
   color: #caf0f8;
 }
-
 /* page download surat end */
+
+/* page web */
+.container-web {
+  color: black;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 100px 60px;
+}
+
+.container-web-title {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: black;
+  padding: 20px 0;
+}
+
+.container-web-title h2 {
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: slideDown 0.6s ease-out forwards;
+}
+
+.container-web-title img {
+  margin-top: 10px;
+  width: 40%;
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: slideDown 0.6s ease-out forwards;
+  animation-delay: 0.4s;
+}
+
+@keyframes slideDown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.container-web-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  color: black;
+  padding: 40px 0;
+  gap: 20px;
+}
+
+.web-content-isi {
+  background-color: #f8f8f8;
+  height: 300px;
+  width: 240px;
+  margin: 10px 0;
+  text-decoration: none;
+  color: #333;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  z-index: 9;
+}
+
+.web-content-isi:hover,
+.web-content-isi:focus {
+  transform: scale(1.1);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.8);
+}
+
+.web-content-isi h5 {
+  padding: 10px;
+  text-align: center;
+  color: black;
+}
+
+.web-content-title {
+  height: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.web-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.web-img img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  transition: transform 0.3s ease;
+}
+
+.web-content-isi:hover img,
+.web-content-isi:focus img {
+  transform: scale(1.1);
+}
+
+.view-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.web-content-isi:hover .view-text,
+.web-content-isi:focus .view-text {
+  opacity: 1;
+}
+/* page web end*/
+
+/* Page lapor */
+.container-cara-melapor {
+  color: black;
+  width: 100%;
+  height: 100vh;
+  padding: 100px 60px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.container-cara-melapor .cara-melapor-title {
+  text-align: center;
+  padding: 20px;
+}
+
+.cara-melapor-title h2 {
+  opacity: 0;
+  transform: translateY(-30px);
+  animation: slideDown 0.6s ease-out forwards;
+}
+
+.cara-melapor-title img {
+  opacity: 0;
+  width: 18%;
+  transform: translateY(-30px);
+  animation: slideDown 0.6s ease-out forwards;
+  animation-delay: 0.4s;
+}
+
+@keyframes slideDown {
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.cara-melapor-content {
+  background-image: url(assets/kertas.png);
+  background-size: 70% auto;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-top: 20px;
+  animation: slideInLeft 0.8s ease-out forwards;
+}
+
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.cara-melapor-content .cara-melapor-tutor {
+  padding: 30px;
+  font-size: 16px;
+  width: 60%;
+  margin-left: 22%;
+  /* animation: slideInLeft 0.8s ease-out 0.2s forwards; */
+}
+
+.tutor-lapor {
+  padding: 20px;
+  margin-left: 40px;
+  font-size: 14px;
+  /* animation: slideInLeft 0.8s ease-out 0.2s forwards; */
+}
+
+.tutor-lapor ol .anak {
+  margin-left: 20px;
+}
+
+.container-layanan-pengaduan {
+  color: black;
+  width: 100%;
+  min-height: 100vh;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+.layanan-pengaduan-title {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: black;
+  padding: 20px 0;
+}
+
+.layanan-pengaduan-title img {
+  width: 17%;
+}
+
+.container-layanan-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  color: black;
+  padding: 40px 0;
+  gap: 10px;
+}
+
+.layanan-content-isi {
+  background-color: #ffffff;
+  height: 300px;
+  width: 250px;
+  margin: 10px 0;
+  text-decoration: none;
+  color: black;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  overflow: hidden;
+  /* position: relative; */
+}
+
+.layanan-content-isi:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.layanan-content-isi h5 {
+  padding: 10px;
+  text-align: center;
+}
+
+.layanan-content-title {
+  height: 75%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.layanan-img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.layanan-img img {
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  transition: all 0.3s ease;
+}
+
+.layanan-content-isi:hover img {
+  transform: scale(1.1);
+}
+
+.view-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(252, 252, 252, 0.9);
+  color: black;
+  padding: 10px 20px;
+  border-radius: 15px;
+  font-size: 16px;
+  font-weight: bold;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  text-align: center;
+  white-space: nowrap;
+}
+
+.layanan-content-isi:hover .view-text {
+  opacity: 1;
+}
+
+/* Page lapor end*/
 
 /* Footer */
 footer {
